@@ -1,7 +1,7 @@
 #! /bin/sh
 #
 # Initially written by John Wu <John.Wu at acm.org> on Jun 1 2009
-# Copyright 2009 the Regents of the University of California
+# Copyright 2009-2014 the Regents of the University of California
 #
 # This file is part of FastBit project distributed under the terms of
 # LGPL.  By continuing to use, modify, or distribute this file you
@@ -19,12 +19,11 @@ Usage: fastbit-config [OPTION]...
 Get @PACKAGE_STRING@ compilation and linking information.
 
 Options:
-  --prefix               display \`--prefix' value used for building the
-                         FastBit library
-  --version              display FastBit version number
-  --libs                 display flags for linking with the FastBit library
-  --cflags               display flags for compiling with the FastBit
-                         library
+  --prefix       display \`--prefix' value used for building the FastBit library
+  --version      display FastBit version number
+  --libs         display flags for linking with the FastBit library
+  --cflags       display CFLAGS for compiling with the FastBit library
+  --cxxflags     display CXXFLAGS for compiling with the FastBit library
 EOF
   exit $1
 }
@@ -43,6 +42,9 @@ while test $# -gt 0 ; do
     ;;
   --cflags)
     echo_cflags=yes
+    ;;
+  --cxxflags)
+    echo_cxxflags=yes
     ;;
   --libs)
     echo_libs=yes
@@ -72,6 +74,15 @@ if test "$echo_cflags" = "yes" ; then
     echo $cflags -I$includedir
   else
     echo $cflags
+  fi
+fi
+
+if test "$echo_cxxflags" = "yes" ; then
+  cxxflags="@DEFS@ @AM_CXXFLAGS@ @PTHREAD_CFLAGS@"
+  if test "$includedir" != "/usr/include" ; then
+    echo $cxxflags -I$includedir
+  else
+    echo $cxxflags
   fi
 fi
 
